<resources>
    <string name="app_name">Messenger</string>
    <string name="tv_app_name">Messenger</string>
    <string name="your_email_hint">Your email:</string>
    <string name="password_hint">Password:</string>
    <string name="login_button">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="register">Register</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="age">Age</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot_password_answer">Forgot password?</string>
    <string name="log_out">Log Out</string>
    <string name="message">Message</string>
    <string name="reset_password">Reset password</string>
    <string name="send_message">Send message</string>
    <string name="online_status">Online status</string>
</resources>